--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section>
         <h2>Contato com a ONG Amigão</h2>
         <address>
-            <p>Endereço:</p>
-            <p>Telefone:</p>
+            <p>Endereço: rua dos magos, numero 75</p>
+            <p>Telefone: (61) 63288-9930 </p>
             <p></p>
 
 
