--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
 </head>
 <body>
     <nav>
-        <h1> Usuário da ONG</h1>
+        <h1> ONG Patinha Amiga</h1>
+        <h2>conforto sem falar uma palavra.</h2>
+
+
+        <table>
+            <tr>
+                <th><a href="contato.html">Contato</a></th>
+                <th><a href="doacoes.html">Doaçoes</a></th>
+                <th><a href="blog.html">Blog</a></th>
+                <th><a href="projetos.html">Projetos</a></th>
+                <th><a href="sobre.html">Sobre</a></th>
+                <th><a href="transparencia.html">Transparência</a></th>
+                <th><a href="voluntariado.html">Voluntariado</a></th>
+
+            </tr>
+        </table>
+
+        <!--
         <ul>
             <li>Inicio</li>
-            <li a href="projeto.html">Projeto</li>
-            <li a href="cadastro.html">Cadastro</li>
+            <li> <a href="projeto.html">Projeto</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
         </ul>
+        -->
     </nav>
 
     <section>
@@ -21,11 +39,11 @@
     <img src="https://cdn.pixabay.com/photo/2016/02/18/18/37/puppy-1207816_1280.jpg" width="250px"></a>
     </section>
     <section>
-        <h2>Missão da Ong</h2>
+        <h2>Missão da ONG</h2>
         <p>promover dignidade e oportunidade de acolhimento</p>
     </section>
     <section>
-        <h2>Contato com a ONG Amigão</h2>
+        <h2>Contato com a ONG Patinha Amiga</h2>
         <address>
             <p>Endereço: rua dos magos, numero 75</p>
             <p>Telefone: (61) 63288-9930 </p>
