--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,25 @@
 
 
      <seção>
-        <h2>Sonhos Acústicos</h2>
-        <p>Para os momentos mais suaves temos violões acústicos de nylon</p>
-        <p> Bem, eu realmente gosto de John Fahey e Leo Kottke, […]</p>
-        <h3>Que tipo de guitarra Robbie Basho tocava??</h3>
+     <h3>🐾Blog Patinha Amiga</h3>   
+     <pre>
+    Aprendizado, carinho e consciência em cada leitura
+    Cuidar de um animal vai muito além de oferecer ração e água.
+    É sobre amor, responsabilidade e respeito por uma vida que confia em nós. 💛
+
+    Aqui no blog da Patinha Amiga, você encontra conteúdos que transformam a forma
+    de se relacionar com os animais:
+
+    Dicas práticas para melhorar o bem-estar do seu pet.
+    Histórias inspiradoras de resgates e adoções que aquecem o coração.
+    Curiosidades e informações sobre saúde, comportamento e direitos dos animais.
+    Reflexões sobre como podemos construir uma sociedade mais justa e amiga dos bichinhos.
+
+    Cada artigo é um convite para você aprender, se emocionar e fazer a diferença 
+    porque quando entendemos melhor nossos amigos de quatro patas, conseguimos oferecer a
+    eles uma vida mais feliz e digna.
+
+    👉 Explore, compartilhe e faça parte dessa corrente de amor e educação!</pre>
     </seção>
 
     <button><a href="index.html">Home</a></button>
