--- a/doacoes.html
+++ b/doacoes.html
@@ -6,7 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pagina de Doações</h1>
+    <h1>💛 Sua doação salva vidas</h1>
+
+    <pre>
+        Cada real doado é transformado em ração, remédio, carinho e esperança.
+        É ele que tira um animal do frio da rua, que garante um tratamento, 
+        que devolve o brilho nos olhos de quem já sofreu demais.
+
+        Quando você doa, não está apenas ajudando — você está escrevendo uma nova história.
+        Uma história de cuidado, de amor e de recomeço.
+
+        🐾 Seja a diferença que eles tanto precisam. Doe agora.
+    </pre>
     <button><a href="index.html">Home</a></button>
     
 </body>
