--- a/blog.html
+++ b/blog.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/index.html">
     <h1>Pagina de Blog</h1>
 
 
-     <seção>
+    
      <h3>🐾Blog Patinha Amiga</h3>   
      <pre>
     Aprendizado, carinho e consciência em cada leitura
@@ -29,9 +30,9 @@
     eles uma vida mais feliz e digna.
 
     👉 Explore, compartilhe e faça parte dessa corrente de amor e educação!</pre>
-    </seção>
+    <button type="submit">Iniciar</button>
 
-    <button><a href="index.html">Home</a></button>
+    </form>
     
 </body>
 </html>
