--- a/doacoes.html
+++ b/doacoes.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/index.html">
     <h1>💛 Sua doação salva vidas</h1>
 
     <pre>
@@ -18,7 +19,9 @@
 
         🐾 Seja a diferença que eles tanto precisam. Doe agora.
     </pre>
-    <button><a href="index.html">Home</a></button>
+    <button type="submit">Iniciar</button>
+    </form>
+
     
 </body>
 </html>
