--- a/sobre.html
+++ b/sobre.html
@@ -6,8 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/index.html">
+
     <h1>Pagina Sobre Nós</h1>
-    <button><a href="index.html">Home</a></button>
+
+    <button type="submit">Iniciar</button>
+    </form>
+  
     
 </body>
 </html>
