--- a/transparencia.html
+++ b/transparencia.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/index.html">
     <h1>Pagina Transparência</h1>
-    <button><a href="index.html">Home</a></button>
-    
+    <button type="submit">Iniciar</button>">
+    </form>
 </body>
 </html>
