--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/index.html">
 
     <div style="text-align: center;">
         <h1>📞 Fale com a Patinha Amiga</h1>
@@ -32,10 +33,8 @@
         ✨ Horário de atendimento: Segunda a Sexta, das 9h às 17h.
         🐾 Aos finais de semana, estamos em campanhas de adoção e eventos pela cidade.
     </pre>
-    
-    <footer style="text-align: center;">
-        <button><a href="index.html">Home</a></button>
 
-    </footer>
+    <button type="submit">Iniciar</button>
+    </form>
 </body>
 </html>
