--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section>
         <h2>Quem Somos</h2>
         <p> Somos uma Organização sem fins lucrativos que atua com animais abandonados</p>
-    <img src="https://cdn.pixabay.com/photo/2016/02/18/18/37/puppy-1207816_1280.jpg" width="250px"></a>
+    <img src="https://cdn.pixabay.com/photo/2016/02/18/18/37/puppy-1207816_1280.jpg" alt="doguinho" width="250">
     </section>
     <section>
         <h2>Missão da ONG</h2>
@@ -53,6 +53,6 @@
         </address>
 
     </section>
-
+    
 </body>
 </html>
