v06 - criação pasta imagens e atualizações

--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
         <h1>📞 Fale com a Patinha Amiga</h1>
         
     </div>
-            <pre>       
+            <pre>       <!--Campo de Contatos-->
 
         Estamos prontos para ouvir você, responder suas dúvidas e receber todo carinho que quiser compartilhar. 💛
 
