--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>conforto sem falar uma palavra.</h2>
 
 
-        <table>
+        <table> <!-- menu de opções-->
             <tr>
                 <th><a href="contato.html">Contato</a></th>
                 <th><a href="doacoes.html">Doaçoes</a></th>
@@ -24,19 +24,11 @@
             </tr>
         </table>
 
-        <!--
-        <ul>
-            <li>Inicio</li>
-            <li> <a href="projeto.html">Projeto</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
-        </ul>
-        -->
     </nav>
-
     <section>
         <h2>Quem Somos</h2>
         <p> Somos uma Organização sem fins lucrativos que atua com animais abandonados</p>
-    <img src="https://cdn.pixabay.com/photo/2016/02/18/18/37/puppy-1207816_1280.jpg" alt="doguinho" width="250">
+    <img src="/imagens/cachorro-index.jpg" alt="doguinho" width="250">
     </section>
     <section>
         <h2>Missão da ONG</h2>
