--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
         <h2>Quem Somos</h2>
         <p> Somos uma Organização sem fins lucrativos que atua com animais abandonados</p>
-    <img src="/imagens/cachorro-index.jpg" alt="doguinho" width="250">
+    <img src="/img/cachorro-index.jpg" alt="doguinho" width="250">
     </section>
     <section>
         <h2>Missão da ONG</h2>
