--- a/projetos.html
+++ b/projetos.html
@@ -11,29 +11,29 @@
 <pre style="text-align: center">
     🐾 Projetos que nascem com sua doação
 🌟 Projeto Barriguinha Cheia
-<img src="/imagens/barriguinha.jpeg" alt="Barriguinha" width="250">
+<img src="/img/barriguinha.jpeg" alt="Barriguinha" width="250">
 Garantir alimentação de qualidade todos os dias para cães e gatos resgatados.
 Com sua ajuda, nenhum potinho fica vazio.
 
 🌟 Projeto Patinha Saudável
-<img src="/imagens/saudavel.jpeg" alt="Saudável" width="250">
+<img src="/img/saudavel.jpeg" alt="Saudável" width="250">
 Vacinas, remédios e castrações para prevenir doenças e dar mais dignidade à vida dos animais.
 Saúde é amor em forma de cuidado.
 
 🌟 Projeto Abrigo do Amor
 
-<img src="/imagens/abrigo.jpg" alt="Abrigo" width="250">"
+<img src="/img/abrigo.jpg" alt="Abrigo" width="250">"
 
 Espaço limpo, seguro e cheio de carinho, onde animais podem se recuperar até encontrarem uma família.
 Um lar temporário, mas com muito afeto.
 
 🌟 Projeto Escola Animal
-<img src="/imagens/escola.jpg" alt="Escola" width="250">
+<img src="/img/escola.jpg" alt="Escola" width="250">
 Aulas e oficinas em escolas e comunidades sobre respeito, posse responsável e proteção aos bichinhos.
 Educar hoje para que amanhã eles não sofram.
 
 🌟 Projeto Final Feliz
-<img src="/imagens/finalfeliz.jpg" alt="Final Feliz" width="500">
+<img src="/img/finalfeliz.jpg" alt="Final Feliz" width="500">
 Campanhas de adoção para conectar corações humanos a corações peludos.
 Porque todo animal merece uma família.
 </pre>
