--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <title>Blog</title>
 </head>
 <body>
     <form action="/index.html">
@@ -32,6 +32,13 @@
     👉 Explore, compartilhe e faça parte dessa corrente de amor e educação!</pre>
     <button type="submit">Iniciar</button>
     </form>
+
+<footer>
+    <fieldset>
+        <p style="text-align: center;"><img src="/imagens/logomarca.png" alt="logomarca" width="50"
+        >Powered by Juniiors3 todos os direitos reservado ® </p>
+    </fieldset>
+</footer>
     
 </body>
 </html>
