--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina Incial</title>
 </head>
 <body>
-    <nav>
+    <header>
         <h1> ONG Patinha Amiga</h1>
         <h2>conforto sem falar uma palavra.</h2>
-
-
+    </header>
+    <nav>
         <table> <!-- menu de opções-->
             <tr>
                 <th><a href="contato.html">Contato</a></th>
@@ -23,28 +23,34 @@
 
             </tr>
         </table>
-
     </nav>
-    <section>
-        <h2>Quem Somos</h2>
-        <p> Somos uma Organização sem fins lucrativos que atua com animais abandonados</p>
-    <img src="/img/cachorro-index.jpg" alt="doguinho" width="250">
-    </section>
-    <section>
-        <h2>Missão da ONG</h2>
-        <p>promover dignidade e oportunidade de acolhimento</p>
-    </section>
-    <section>
-        <h2>Contato com a ONG Patinha Amiga</h2>
-        <address>
-            <p>Endereço: rua dos magos, numero 75</p>
-            <p>Telefone: (61) 63288-9930 </p>
-            <p></p>
-
-
-        </address>
-
-    </section>
+    <main>
+        <section>
+            <h2>Quem Somos</h2>
+            <p> Somos uma Organização sem fins lucrativos que atua com animais abandonados</p>
+        
+        </section>
+        <figcaption><img src="/imagens/cachorro-index.jpg" alt="doguinho" width="250"></figcaption>
+        <section>
+            <article>
+                <h2>Missão da ONG</h2>
+                <p>promover dignidade e oportunidade de acolhimento</p>
+            </article>
+        </section>
+        <section>
+            <h2>Contato com a ONG Patinha Amiga</h2>
+            <address>
+                <p>Endereço: rua dos magos, numero 75</p>
+                <p>Telefone: (61) 63288-9930 </p>
+                <p></p>
+            </address>
+        </section>
+    </main>
+    <footer>
+        <fieldset>
+            <p style="text-align: center;"><img src="/imagens/logomarca.png" alt="logomarca" width="50">Powered by Juniiors3 todos os direitos reservado ® </p>
+        </fieldset>
+    </footer>
     
 </body>
 </html>
