--- a/transparencia.html
+++ b/transparencia.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <title>transparência</title>
 </head>
 <body>
     <form action="/index.html">
     <h1>Pagina Transparência</h1>
     <button type="submit">Iniciar</button>">
     </form>
+<footer>
+    <fieldset>
+        <p style="text-align: center;"><img src="/imagens/logomarca.png" alt="logomarca" width="50"
+        >Powered by Juniiors3 todos os direitos reservado ® </p>
+    </fieldset>
+</footer>
 </body>
 </html>
