--- a/projetos.html
+++ b/projetos.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <title>Projetos</title>
 </head>
 <body>
     <form action="/index.html">
-    <h1>Pagina de Projeto</h1>
-<pre style="text-align: center">
+        <header>
+            <h1>Pagina de Projeto</h1>
+        </header>
+    <div>
+        <pre style="text-align: center">
     🐾 Projetos que nascem com sua doação
 🌟 Projeto Barriguinha Cheia
-<img src="/img/barriguinha.jpeg" alt="Barriguinha" width="250">
+<figcaption><img src="/imagens/barriguinha.jpeg" alt="Barriguinha" width="250"></figcaption>
 Garantir alimentação de qualidade todos os dias para cães e gatos resgatados.
 Com sua ajuda, nenhum potinho fica vazio.
 
 🌟 Projeto Patinha Saudável
-<img src="/img/saudavel.jpeg" alt="Saudável" width="250">
+<figcaption><img src="/imagens/saudavel.jpeg" alt="Saudável" width="250"></figcaption>
 Vacinas, remédios e castrações para prevenir doenças e dar mais dignidade à vida dos animais.
 Saúde é amor em forma de cuidado.
 
 🌟 Projeto Abrigo do Amor
 
-<img src="/img/abrigo.jpg" alt="Abrigo" width="250">"
+<figcaption><img src="/imagens/abrigo.jpg" alt="Abrigo" width="250"></figcaption>
 
 Espaço limpo, seguro e cheio de carinho, onde animais podem se recuperar até encontrarem uma família.
 Um lar temporário, mas com muito afeto.
 
 🌟 Projeto Escola Animal
-<img src="/img/escola.jpg" alt="Escola" width="250">
+<figcaption><img src="/imagens/escola.jpg" alt="Escola" width="250"></figcaption>
 Aulas e oficinas em escolas e comunidades sobre respeito, posse responsável e proteção aos bichinhos.
 Educar hoje para que amanhã eles não sofram.
 
 🌟 Projeto Final Feliz
-<img src="/img/finalfeliz.jpg" alt="Final Feliz" width="500">
+<figcaption><img src="/imagens/finalfeliz.jpg" alt="Final Feliz" width="500"></figcaption>
 Campanhas de adoção para conectar corações humanos a corações peludos.
 Porque todo animal merece uma família.
 </pre>
+    </div>
+
 <button type="submit">Iniciar</button>
     </form>
     
 
-
+<footer>
+    <fieldset>
+        <p style="text-align: center;"><img src="/imagens/logomarca.png" alt="logomarca" width="50"
+        >Powered by Juniiors3 todos os direitos reservado ® </p>
+    </fieldset>
+</footer>
     
 </body>
 </html>
