--- a/testee.html
+++ b/testee.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste</title>
+    <title>Document</title>
 </head>
 <body>
-    <form>
-    <fieldset>
-        <legend>Informações Pessoais</legend>
-        <label id="cep">CEP</label><br>
-        <input type="text" id="cep" name="cep" maxlength="9" placeholder="00000-000" title="Formato: 00000-0000" pattern="\d{5}-\d{3}"><br>
- 
-    </fieldset>
-
-    <button type="submit">Enviar</button>
+    
 </body>
 </html>
