--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <th><a href="sobre.html">Sobre</a></th>
                 <th><a href="transparencia.html">Transparência</a></th>
                 <th><a href="voluntariado.html">Voluntariado</a></th>
+                <th><a href="cadastro_proj.html">Login</a></th>
 
             </tr>
         </table>
