--- a/voluntariado.html
+++ b/voluntariado.html
@@ -31,11 +31,31 @@
         <input type="text" id="cep" name="cep" maxlength="9" placeholder="00000-000" title="Formato: 00000-0000" pattern="\d{5}-\d{3}"><br>
         <label id="cpf" >CPF</label><br>    
         <input type="text" maxlength="14" placeholder="000.000.000-00" title="Formato:000.000.000-00" pattern="\d{3}\.\d{3}\.\d{3}\-\d{2}" required><br> <!-- Preenchmento com verificação obrigado a preencher -->
+        
+    </form>
+    </fieldset>
+    <fieldset>
+        <legend>Informações Adicionais</legend>
+        <div>
+            <datalist id="habilidades">
+                <option value="Banho">
+                <option value="Tosa">
+                <option value="Saúde">
+                <option value="Outros">
+            </datalist> 
+            <label for="habilidades">Escolha sua Opção:</label>
+            <input list="habilidades" id="habilidades" name="habilidades"><br>
+            <label id="disponibilidade" name="disponibilidade">Disponibilidade Imediata?</label>
+            <input type="radio" id="sim" name="disponibilidade" value="sim">Sim
+            <input type="radio" id="nao" name="disponibilidade" value="nao">Não
+        </div>
+    </fieldset>
+    <div style="text-align: center;">
         <button type="submit">Enviar</button>
         <button type="reset">Limpar</button>
         <button type="submit">Iniciar</button> <!--Botão de voltar -->
-    </form>
-    </fieldset>
+    </div>
+    
     </nav>
     <footer>
         <fieldset>
