V10 - Correções pagina e atualizações

--- a/index.html
+++ b/index.html
@@ -13,15 +13,8 @@
     <nav>
         <table> <!-- menu de opções-->
             <tr>
-                <th><a href="contato.html">Contato</a></th>
-                <th><a href="doacoes.html">Doaçoes</a></th>
-                <th><a href="blog.html">Blog</a></th>
-                <th><a href="projetos.html">Projetos</a></th>
-                <th><a href="sobre.html">Sobre</a></th>
-                <th><a href="transparencia.html">Transparência</a></th>
-                <th><a href="voluntariado.html">Voluntariado</a></th>
-                <th><a href="cadastro_proj.html">Login</a></th>
-
+                <th><a href="projetos.html">Projetos sociais</a></th>
+                <th><a href="cadastro.html">Cadastro</a></th>
             </tr>
         </table>
     </nav>
@@ -31,13 +24,13 @@
             <p> Somos uma Organização sem fins lucrativos que atua com animais abandonados</p>
         
         </section>
-        <figcaption><img src="/imagens/cachorro-index.jpg" alt="doguinho" width="250"></figcaption>
-        <section>
+        <img src="/imagens/cachorro-index.jpg" alt="doguinho" width="250">
+        <div>
             <article>
                 <h2>Missão da ONG</h2>
                 <p>promover dignidade e oportunidade de acolhimento</p>
             </article>
-        </section>
+        </div>
         <section>
             <h2>Contato com a ONG Patinha Amiga</h2>
             <address>
