--- a/projetos.html
+++ b/projetos.html
@@ -14,7 +14,7 @@
         <pre style="text-align: center">
     🐾 Projetos que nascem com sua doação
 🌟 Projeto Barriguinha Cheia
-<figcaption><img src="/imagens/barriguinha.jpeg" alt="Barriguinha" width="250"></figcaption>
+<figcaption><img src="/imagens/alimentando.webp" alt="Barriguinha" width="250"></figcaption>
 Garantir alimentação de qualidade todos os dias para cães e gatos resgatados.
 Com sua ajuda, nenhum potinho fica vazio.
 
