--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="container-cadastro">
         <div class="input-group">
 
             <form action="index.html">
