--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
   <header class="header">
     <div class="header-content">
       <img src="imagens/logomarca.png" width="100" alt="Logomarca Patinha Amiga">
-
-      <!-- botão hamburguer (só aparece no mobile) -->
       <button class="menu-toggle" id="menuToggle" aria-label="Abrir menu">☰</button>
-
       <h1>ONG Patinha Amiga - Conforto sem falar uma palavra.</h1>
     </div>
-
-    <!-- Navegação principal -->
-    <nav class="nav" id="mainNav" aria-label="Menu principal">
-      <ul class="menu">
-        <li><a href="projetos.html">Projetos sociais</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-      </ul>
-    </nav>
+          <li class="has-submenu">
+            <a href="#">Menu ▾</a>
+            <ul class="submenu">
+              <li><a href="projetos.html">Projetos</a></li>
+              <li><a href="cadastro.html">Cadastro</a></li>
+            </ul>
+          </li>
   </header>
 
-  <main class="container">
+  <main class="container-index">
     <section class="stitulo" aria-labelledby="stitulo">
       <h2>Quem Somos</h2>
       <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
