--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           </li>
   </header>
 
-  <main class="container-index">
+  <script src="Assets/js/spa.js" defer></script>
+
+  <main id="content" class="container-index">
     <section class="stitulo" aria-labelledby="stitulo">
       <h2>Quem Somos</h2>
       <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
