--- a/projetos.html
+++ b/projetos.html
@@ -14,8 +14,10 @@
                 <h1>Venha conhecer nossos projetos</h1>
             </div>
         </header>
+
+        <script src="Assets/js/spa.js" defer></script>
         
-        <main class="container-projetos">
+        <main id="content" class="container-projetos">
             <h2 class="title">🐾<b>Projetos que nascem com sua doação</b><br></h2>
             <section class="grid">
                 
