--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,9 @@
         </div>
     </header>
 
-    <main class="container-cadastro">
+    <script src="Assets/js/spa.js" defer></script>
+    
+    <main id="content" class="container-cadastro">
         <div class="input-group">
 
             <form action="index.html">
@@ -25,7 +27,7 @@
 
                             <div><!--Nome-->
                                 <label for="nome">Nome:</label>
-                                <input type="text" id="nome" name="nome"><!--Preenchmento com verificação obrigado a preencher -->
+                                <input type="text" id="nome" name="nome" required><!--Preenchmento com verificação obrigado a preencher -->
                             </div>
                             <div><!--Sobrenome-->
                                 <label for="sobrenome">Sobrenome:</label>
@@ -33,7 +35,7 @@
                             </div>
                             <div> <!--CPF-->
                                 <label for="cpf" >CPF:</label>
-                                <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" title="Formato:000.000.000-00" pattern="\d{3}\.\d{3}\.\d{3}\-\d{2}" required> <!-- Preenchmento com verificação obrigado a preencher -->
+                                <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" title="Formato:000.000.000-00" pattern="\d{3}.\d{3}.\d{3}-\d{2}" required> <!-- Preenchmento com verificação obrigado a preencher -->
                             </div>
                             <div><!--Data Nascimento-->
                                 <label for="dtnascimento">Data Nascimento:</label>
@@ -60,11 +62,11 @@
                             <label for="cidade">Cidade</label>
                             <input type="text" id="cidade" name="cidade">
                             </div>
-                            <div>
+                            <div><!--Estado-->
                                 <label for="estado">Estado</label>
                                 <input type="text" id="estado" name="estado">
                             </div>
-                            <div>
+                            <div><!--CEP-->
                                 <label for="cep">CEP</label>
                                 <input type="text" id="cep" name="cep" maxlength="9" placeholder="00000-000" title="Formato: 00000-0000" pattern="\d{5}-\d{3}" required><br> <!-- Preenchmento com verificação obrigado a preencher -->
                             </div>
