--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="header-content">
       <img src="imagens/logomarca.png" width="100" alt="Logomarca Patinha Amiga">
-      <button class="menu-toggle" id="menuToggle" aria-label="Abrir menu">☰</button>
+
       <h1>ONG Patinha Amiga - Conforto sem falar uma palavra.</h1>
     </div>
           <li class="has-submenu">
@@ -30,7 +30,7 @@
       <h2>Quem Somos</h2>
       <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
       <figure>
-        <img src="/imagens/cachorro-index.jpg" alt="Cachorro feliz no abrigo">
+        <img src="imagens/cachorro-index.jpg" loading="lazy" alt="Cachorro feliz">
       </figure>
     </section>
 
@@ -49,7 +49,8 @@
 
   <footer class="footer">
     <p>
-      <img src="/imagens/logomarca.png" alt="Logomarca" width="50">
+      <button id="toggle-contrast" class="btn-contraste" aria-pressed="false">Ativar Alto Contraste</button>
+      <img src="/imagens/logomarca.png" loading="lazy" alt="Logomarca" width="50">
       Powered by Juniiors3 — todos os direitos reservados ®
     </p>
   </footer>
