--- a/cadastro.html
+++ b/cadastro.html
@@ -15,11 +15,11 @@
     </header>
 
     <script src="Assets/js/spa.js" defer></script>
-    
+
     <main id="content" class="container-cadastro">
         <div class="input-group">
 
-            <form action="index.html">
+            <form id="cadastroForm" novalidate aria-describedby="mensagem-status" aria-live="polite">
                 <div class="input-box" style="align-items: center;">
                     <fieldset>
                         <fieldset>
@@ -27,7 +27,7 @@
 
                             <div><!--Nome-->
                                 <label for="nome">Nome:</label>
-                                <input type="text" id="nome" name="nome" required><!--Preenchmento com verificação obrigado a preencher -->
+                                <input type="text" id="nome" name="nome" required aria-required="true"><!--Preenchmento com verificação obrigado a preencher -->
                             </div>
                             <div><!--Sobrenome-->
                                 <label for="sobrenome">Sobrenome:</label>
@@ -35,7 +35,7 @@
                             </div>
                             <div> <!--CPF-->
                                 <label for="cpf" >CPF:</label>
-                                <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" title="Formato:000.000.000-00" pattern="\d{3}.\d{3}.\d{3}-\d{2}" required> <!-- Preenchmento com verificação obrigado a preencher -->
+                                <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" title="Formato:000.000.000-00" pattern="\d{3}.\d{3}.\d{3}-\d{2}" required aria-required="true"> <!-- Preenchmento com verificação obrigado a preencher -->
                             </div>
                             <div><!--Data Nascimento-->
                                 <label for="dtnascimento">Data Nascimento:</label>
@@ -68,7 +68,7 @@
                             </div>
                             <div><!--CEP-->
                                 <label for="cep">CEP</label>
-                                <input type="text" id="cep" name="cep" maxlength="9" placeholder="00000-000" title="Formato: 00000-0000" pattern="\d{5}-\d{3}" required><br> <!-- Preenchmento com verificação obrigado a preencher -->
+                                <input type="text" id="cep" name="cep" maxlength="9" placeholder="00000-000" title="Formato: 00000-0000" pattern="\d{5}-\d{3}" required aria-required="true"><br> <!-- Preenchmento com verificação obrigado a preencher -->
                             </div>
                         </fieldset>
                         <div>
@@ -108,7 +108,8 @@
     </main>
 <footer class="footer">
     <fieldset>
-        <p style="text-align: center;"><img src="/imagens/logomarca.png" alt="logomarca" width="50"
+        <button id="toggle-contrast" class="btn-contraste" aria-pressed="false">Ativar Alto Contraste</button>
+        <p style="text-align: center;"><img src="/imagens/logomarca.png" loading="lazy" alt="logomarca" width="50"
         >Powered by Juniiors3 todos os direitos reservado ® </p>
     </fieldset>
 </footer>
