organização de arquivos e pastas

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/css/css.css">
-    <link rel="stylesheet" href="Assets/js/js.js">
+     <link rel="stylesheet" href="assets/css.css">
+     <script defer src="scripts/js.js"></script>
     <title>Voluntariado - Cadastro</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         </div>
     </header>
 
-    <script src="Assets/js/spa.js" defer></script>
+    <script src="scripts/spa.js" defer></script>
 
     <main id="content" class="container-cadastro">
         <div class="input-group">
