--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Assets/css/css.css">
-  <script defer src="Assets/js/js.js"></script>
+  <link rel="stylesheet" href="assets/css.css">
+  <script defer src="scripts/js.js"></script>
   <title>Página Inicial</title>
 </head>
 <body>
   <header class="header">
     <div class="header-content">
-      <img src="imagens/logomarca.png" width="100" alt="Logomarca Patinha Amiga">
+      <img src="assets/img/logomarca.png" width="100" alt="Logomarca Patinha Amiga">
 
       <h1>ONG Patinha Amiga - Conforto sem falar uma palavra.</h1>
     </div>
@@ -23,14 +23,14 @@
           </li>
   </header>
 
-  <script src="Assets/js/spa.js" defer></script>
+  <script src="scripts/spa.js" defer></script>
 
   <main id="content" class="container-index">
     <section class="stitulo" aria-labelledby="stitulo">
       <h2>Quem Somos</h2>
       <p>Somos uma organização sem fins lucrativos que atua com animais abandonados.</p>
       <figure>
-        <img src="imagens/cachorro-index.jpg" loading="lazy" alt="Cachorro feliz">
+        <img src="assets/img/cachorro-index.jpg" loading="lazy" alt="Cachorro feliz">
       </figure>
     </section>
 
@@ -50,7 +50,7 @@
   <footer class="footer">
     <p>
       <button id="toggle-contrast" class="btn-contraste" aria-pressed="false">Ativar Alto Contraste</button>
-      <img src="/imagens/logomarca.png" loading="lazy" alt="Logomarca" width="50">
+      <img src="assets/img/logomarca.png" loading="lazy" alt="Logomarca" width="50">
       Powered by Juniiors3 — todos os direitos reservados ®
     </p>
   </footer>
