V14 - Atualizações de JS e html, com algumas correções de código

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,18 @@
       <h1>ONG Patinha Amiga - Conforto sem falar uma palavra.</h1>
     </div>
           <li class="has-submenu">
+            
+            ☰
+            
+            </button>
             <a href="#">Menu ▾</a>
             <ul class="submenu">
               <li><a href="projetos.html">Projetos</a></li>
               <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
           </li>
+          <button class="toggle-contrast" onclick="alternarModoEscuro()" aria-label="Alternar modo escuro">🌓 Modo Escuro</button>
+
   </header>
 
   <script src="scripts/spa.js" defer></script>
@@ -49,7 +55,7 @@
 
   <footer class="footer">
     <p>
-      <button id="toggle-contrast" class="btn-contraste" aria-pressed="false">Ativar Alto Contraste</button>
+      <button id="toggle-contrast" class="btn-contraste" aria-pressed="false">🌓 Modo Escuro</button>
       <img src="assets/img/logomarca.png" loading="lazy" alt="Logomarca" width="50">
       Powered by Juniiors3 — todos os direitos reservados ®
     </p>
